Utilized spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=authentication_service
+spring.application.name=auth_handler
+
+spring.datasource.url=jdbc:postgresql://aws-1-eu-central-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.tvaexnnssnczsvljedop
+spring.datasource.password=DmM4zQLvn#x@
+
+spring.jpa.hibernate.ddl-auto=update
