--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-function-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 
     <!-- Database Driver -->
     <dependency>
@@ -63,6 +67,7 @@
       <version>4.5.0</version>
     </dependency>
 
+    <!-- AWS -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-function-adapter-aws</artifactId>
