--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -4,4 +4,9 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=0
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
