--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,6 @@
       "@/config/*": [ "config/* "]
     }
   },
-  "include": [ "src/**/*" ],
-  "exclude": [ "node_modules", "dist", "tests"]
+  "include": [ "src/**/*", "tests/**/*" ],
+  "exclude": [ "node_modules", "dist"]
 }
