Added fixtures folder for absolute import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
       "@/infrastructure/*": [ "infrastructure/*" ],
       "@/presentation/*": [ "presentation/*" ],
       "@/shared/*": [ "shared/*" ],
-      "@/config/*": [ "config/* "]
+      "@/config/*": [ "config/* "],
+      "@/fixtures/*": ["../tests/fixtures/*"]
     }
   },
   "include": [ "src/**/*", "tests/**/*" ],
