--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "esbuild src/server.ts --bundle --platform=node --target=node18 --outfile=dist/server.js",
     "start": "node dist/server.js",
-    "test": "jest"
+    "test": "DOTENV_CONFIG_PATH=.env.test jest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -31,10 +34,12 @@
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.2.3",
+    "@types/supertest": "^6.0.3",
     "drizzle-kit": "^0.31.9",
     "esbuild": "^0.27.3",
     "jest": "^30.2.0",
     "rimraf": "^6.1.2",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
