Installed serverless plugins for deployment

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "savings-tracker-service-auth-handler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "build": "esbuild src/server.ts --bundle --platform=node --target=node18 --outfile=dist/server.js",
     "start": "node dist/server.js",
     "test": "DOTENV_CONFIG_PATH=.env.test jest",
+    "deploy": "serverless deploy --stage prod --region eu-central-1",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -41,6 +42,10 @@
     "esbuild": "^0.27.3",
     "jest": "^30.2.0",
     "rimraf": "^6.1.2",
+    "serverless": "^3.40.0",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-esbuild": "^1.57.0",
+    "serverless-plugin-typescript": "^2.1.5",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
